--- a/Meshiterro/app/views/post_images/show.html.erb
+++ b/Meshiterro/app/views/post_images/show.html.erb
@@ -9,12 +9,31 @@
     <!--URLの『post_image_path(@post_image.id』は『@post_image』だけでも可　showアクションパスと類似する、updateとdestroyの場合のみ！-->
   <% end %>
 
+  <!--ここからいいね機能-->
+  <% if @post_image.favorited_by?(current_user) %>
+    <p>
+      <%= link_to post_image_favorites_path(@post_image), method: :delete do %>
+       ❤<%= @post_image.favorites.count %>いいね
+      <% end %>
+    </p>
+  <% else %>
+    <p>
+      <%= link_to post_image_favorites_path(@post_image), method: :post do %>
+        ♡<%= @post_image.favorites.count %>いいね
+      <% end %>
+    </p>
+  <% end %>
+  <!--いいね機能ここまで-->
+
 </div>
 
-<div class="comments">
+
+
+<!--ここからコメント機能-->
+<div class="comments"> <!--コメント表示部分-->
   <p>コメント件数:<%= @post_image.post_comments.count %></p>
   <% @post_image.post_comments.each do |post_comment| %>
-    <p><%= image_tag('sample-author1.jpg') %></p>
+    <p><%= attachment_image_tag post_comment.user, :profile_image, fallback:"no_image.jpg", size:"60x60" %> %></p>
     <%= post_comment.user.name %>
     <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
     <% if post_comment.user == current_user %>
@@ -22,14 +41,15 @@
       <%= link_to '削除', post_image_post_comment_path(post_comment.post_image,post_comment), method: :delete %>
     </div>
     <% end %>
-    
+
   <% end %>
 </div>
 
-<div class="new-comment">
+<div class="new-comment"> <!--コメント投稿部分-->
 <%= form_with(model:[@post_image,@post_comment], local: true) do |f| %>
   <%= f.text_area :comment, rows:'5',placeholder:"コメントをここに" %>
   <%= f.submit '送信する' %>
 
 <% end %>
 </div>
+<!--コメント機能ここまで-->
