--- a/Meshiterro/app/views/post_images/index.html.erb
+++ b/Meshiterro/app/views/post_images/index.html.erb
@@ -1,17 +1,3 @@
 
-<% @post_images.each do |post_image| %>
-<div>
-  <%= link_to post_image_path(post_image.id) do %>
-    <%= attachment_image_tag post_image, :image %>
-  <% end %>
+<%= render 'post_images/list', post_images: @post_images %>
 
-  <p>投稿ユーザー画像:<%= attachment_image_tag post_image.user, :profile_image, fallback:"no_image.jpg", size:"60x60" %> %></p>
-  <!--usersモデルのprofile_imageから、attachment_image_tagで挿入-->
-  <p>ショップ名:<%= post_image.shop_name %></p>
-  <p>説明:<%= post_image.caption %></p>
-  <p>ユーザーネーム:<%= post_image.user.name %></p>
-  <p><%= link_to "#{post_image.post_comments.count}コメント", post_image_path(post_image.id) %></p>
-</div>
-<% end %>
-
-<%= paginate @post_images %>
